# prir-project

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark3.cpp  benchmark3mpi.cpp  parameters3.hpp  spec.hpp
data/1/: benchmark1.json  benchmark1mpi.json  benchmark2c.json  benchmark2cpp.json  benchmark3.json  benchmark3mpi.json
data/2/: benchmark1.json  benchmark2c.json  benchmark2cpp.json  benchmark3.json
src/: CMakeLists.txt  cutoffs.h  mpi_.c  mpi_.h  openmp_.c  openmp_.h  serial_.c  serial_.h
src/3/c/: mpi_.c  mpi_.h  openmp_.c  openmp_.h  serial_.c  serial_.h
src/3/cpp/: serial_.hpp  std_.hpp
test/: CMakeLists.txt  mpi_environment.hpp  mpi_test.cpp  mpi_test_search.hpp  test_all.cpp  test_c_search.hpp  test_cpp_search.hpp  test_search.hpp
